--- a/picture/assets/index.html
+++ b/picture/assets/index.html
@@ -16,8 +16,8 @@
       <!-- Header Part Here -->
       <header class="flex flex-col  items-center">
       <div class="flex justify-center items-center">
-        <img class="absolute xl:96 lg:w-96 md:w-80 " src="/picture/assets/bg.png" alt="">
-        <img class="bottom-20  relative" src="/picture/assets/Group.png" alt="">
+        <img class="absolute xl:96 lg:w-96 md:w-80 " src="/assets/bg.png" alt="">
+        <img class="bottom-20  relative" src="/assets/Group.png" alt="">
       </div> 
       <!-- Input Main Part Here -->
             <div class="bg-white w-full xl:mx-40 lg:mx-36 md:mx-32 h-80 rounded-lg shadow-lg p-8 lg:text-xl md:text-xl sm:text-xl">
